--- a/ansible/roles/demo-data/tasks/main.yml
+++ b/ansible/roles/demo-data/tasks/main.yml
@@ -2,12 +2,11 @@
   import_tasks: generatortron.yml
   vars:
     description: main
-    rails_env: production
     additional_env: ""
     rails_runner: ./script/rails runner
     script_path: "{{ role_path }}/files/scripts/generatortron.rb"
     data_path: "{{ role_path }}/files/data.yaml"
-    ruby_bin_dir: /opt/ruby-1.9/bin
+    ruby_bin_dir: "{{ruby_19_bin_dir}}"
     chdir: /data/private/share/rails/emma/core
 
 - name: Stop meca
@@ -19,13 +18,12 @@
   import_tasks: generatortron.yml
   vars:
     description: meca
-    rails_env: production
     # additional_env: "PHOENIX_START=false"
     additional_env: ""
     rails_runner: ./script/runner
     script_path: "{{ role_path }}/files/scripts/generatortron_meca.rb"
     data_path: "{{ role_path }}/files/data.yaml"
-    ruby_bin_dir: /opt/ruby-1.8/bin
+    ruby_bin_dir: "{{ruby_18_bin_dir}}"
     chdir: /data/private/share/rails/meca
 
 - name: Start meca
