--- a/ansible/roles/ruby/tasks/main.yml
+++ b/ansible/roles/ruby/tasks/main.yml
@@ -43,25 +43,25 @@
     dest: "{{ item.dest }}"
     state: link
   loop:
-    - src: /opt/ruby-1.8/bin/ruby
+    - src: "{{ruby_18_bin_dir}}ruby"
       dest: /usr/bin/ruby1.8
 
-    - src: /opt/ruby-1.8/bin/gem
+    - src: "{{ruby_18_bin_dir}}/gem"
       dest: /usr/bin/gem1.8
 
-    - src: /opt/ruby-1.8/bin/irb
+    - src: "{{ruby_18_bin_dir}}/irb"
       dest: /usr/bin/irb1.8
 
-    - src: /opt/ruby-1.9/bin/ruby
+    - src: "{{ruby_19_bin_dir}}/ruby"
       dest: /usr/bin/ruby1.9
 
-    - src: /opt/ruby-1.9/bin/gem
+    - src: "{{ruby_19_bin_dir}}/gem"
       dest: /usr/bin/gem1.9
 
-    - src: /opt/ruby-1.9/bin/irb
+    - src: "{{ruby_19_bin_dir}}/irb"
       dest: /usr/bin/irb1.9
 
-    - src: /opt/ruby-1.9/bin/rake
+    - src: "{{ruby_19_bin_dir}}/rake"
       dest: /usr/bin/rake1.9
 
     - src: /usr/bin/ruby1.9
