--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,3 +1,7 @@
+CODE_PATH = [ ENV['FLIGHT_CODE'], "#{ENV['HOME']}/code" ]
+  .compact
+  .map { |p| File.expand_path(p) }
+  .detect { |p| File.directory?(p) }
 ANSIBLE_DIR="../ansible"
 MACHINES = [
   {
@@ -78,6 +82,9 @@ Vagrant.configure("2") do |config|
 
       unless to_boolean(ENV['ACCEPTANCE'])
         v.vm.synced_folder ANSIBLE_DIR, "/ansible"
+        if File.directory?(CODE_PATH)
+          v.vm.synced_folder CODE_PATH, "/code"
+        end
 
         playbooks.each do |playbook|
           v.vm.provision "#{playbook[:id]}_playbook", type: "ansible_local", run: "never" do |ansible|
