--- a/ansible/roles/package-mia/tasks/main.yml
+++ b/ansible/roles/package-mia/tasks/main.yml
@@ -1,40 +1,23 @@
-- name: Download mia.tgz from S3
-  amazon.aws.aws_s3:
-    bucket: alces-flight
-    object: /concertim/packages/appliances/mia.tgz
-    dest: "{{ role_path }}/files/tmp/mia.tgz"
-    mode: get
-    aws_access_key: "{{ aws_access_key_id }}"
-    aws_secret_key: "{{ aws_secret_access_key }}"
-
 - name: Make destination directory
   ansible.builtin.file:
     path: "{{ package_mia_root_dir }}"
-    owner: www-data
-    group: www-data
+    owner: "{{app_user}}"
+    group: "{{app_user}}"
     mode: "755"
     state: directory
 
-- name: Extract tar files
-  ansible.builtin.unarchive:
-    src: "tmp/mia.tgz"
-    dest: "{{ package_mia_root_dir }}"
-    creates: "{{ package_mia_root_dir }}/mia"
+- name: Install mia tarball from s3
+  vars:
+    destination_dir: "{{ package_mia_root_dir }}"
+    s3_prefix: "{{s3_appliances_prefix}}"
+    tarball_name: mia.tgz
+    untarred_dir: mia
+  include_tasks: install_s3_tarball.yml
 
-- name: Correct ownership
-  ansible.builtin.file:
-    path: "{{ phoenix_modules_root_dir }}/mia"
-    owner: www-data
-    group: www-data
-    recurse: true
-
-# XXX I think that this are not needed.  It appears to be used by the first
-# time setup wizard and hardware wizard.  I'm not sure that we want either of
-# those anymore.
 - name: Create control stream spool directory
   ansible.builtin.file:
     path: /var/spool/control_stream
-    owner: www-data
+    owner: "{{app_user}}"
     group: root
     mode: "755"
     state: directory
@@ -44,7 +27,6 @@
     src: "optimization-js.tgz"
     dest: /opt
     creates: /opt/js
-
 
 - name: Install local_environment.rb
   ansible.builtin.copy:
@@ -57,7 +39,6 @@
     path: "{{ package_mia_root_dir }}/mia/config/environments/development.rb"
     regexp: "config.cache_classes = false"
     replace: "config.cache_classes = true"
-
 
 - name: Install mongrel config files
   vars:
