--- a/ansible/roles/license-limits/defaults/main.yml
+++ b/ansible/roles/license-limits/defaults/main.yml
@@ -1,4 +1,4 @@
-release_yml_dest: /data/private/share/etc/concurrent-thinking/appliance/release.yml
+release_yml_dest: "{{ct_etc_dir}}/appliance/release.yml"
 
 # 30 days in seconds.
 license_expires_in: "{{ 30 * 24 * 60 * 60 }}"
