--- a/ansible/roles/phoenix-modules/defaults/main.yml
+++ b/ansible/roles/phoenix-modules/defaults/main.yml
@@ -1,4 +1,3 @@
-phoenix_modules_root_dir: "/data/private/share/rails"
 integrator_password: integrator
 modules:
   - hacor
@@ -7,5 +6,5 @@ modules:
   - sas
   - scram
   - uma
-bind_directory: /opt/concurrent-thinking
-dynamic_images: "/opt/concurrent-thinking/mia/public/images/dynamic/"
+phoenix_modules_bind_directory: /opt/concurrent-thinking
+phoenix_modules_dynamic_images: "/opt/concurrent-thinking/mia/public/images/dynamic/"
