--- a/ansible/roles/configure-vanilla/tasks/main.yml
+++ b/ansible/roles/configure-vanilla/tasks/main.yml
@@ -54,7 +54,7 @@
         cmd: |
           PATH={{ruby_18_bin_dir}}:$PATH
           sudo -u www-data --preserve-env=PATH /bin/bash -c 'RAILS_ENV={{ rails_env }} script/runner /usr/local/sbin/ftsw-automation.rb'
-        chdir: /data/private/share/rails/sas
+        chdir: "{{rails_root_dir}}/sas"
       register:
         ftsw_automation
       # The failure will become fatal after the stderr and stdout have been printed.
@@ -78,4 +78,4 @@
     cmd: |
       PATH={{ruby_19_bin_dir}}:$PATH
       sudo -u www-data --preserve-env=PATH /bin/bash -c 'RAILS_ENV={{ rails_env }} ./script/rails runner /usr/local/sbin/ftsw-users.rb'
-    chdir: /data/private/share/rails/emma/core
+    chdir: "{{rails_root_dir}}/emma/core"
