--- a/ansible/roles/data_dirs/tasks/main.yml
+++ b/ansible/roles/data_dirs/tasks/main.yml
@@ -26,12 +26,12 @@
       group: root
       mode: "755"
 
-    - path: /data/private/share/etc/concurrent-thinking
+    - path: "{{ct_etc_dir}}"
       owner: "{{app_user}}"
       group: "{{app_user}}"
       mode: u=rwx,g=rx,o=rx
 
-    - path: /data/private/share/etc/concurrent-thinking/ssl
+    - path: "{{ct_etc_dir}}/ssl"
       owner: "{{app_user}}"
       group: "{{app_user}}"
       mode: "755"
@@ -87,7 +87,7 @@
     dest: "{{ item.dest }}"
     state: link
   loop:
-    - src: /data/private/share/etc/concurrent-thinking
+    - src: "{{ct_etc_dir}}"
       dest: /etc/concurrent-thinking
 
 - name: Create bind mounts
