--- a/ansible/roles/emma/vars/main.yml
+++ b/ansible/roles/emma/vars/main.yml
@@ -1,3 +1,1 @@
-dest_path: /data/private/share/rails
-emma_path: "{{ dest_path }}/emma"
-core_path: "{{ emma_path }}/core"
+emma_path: "{{ rails_root_dir }}/emma"
