--- a/ansible/roles/phoenix-modules/tasks/main.yml
+++ b/ansible/roles/phoenix-modules/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Make destination directory
   ansible.builtin.file:
-    path: "{{ phoenix_modules_root_dir }}"
+    path: "{{ rails_root_dir }}"
     owner: "{{ app_user }}"
     group: "{{ app_user }}"
     mode: "755"
@@ -8,19 +8,21 @@
 
 - name: Install phoenix modules tarballs from s3
   vars:
-    destination_dir: "{{ phoenix_modules_root_dir }}"
+    destination_dir: "{{ rails_root_dir }}"
     s3_prefix: "{{s3_modules_prefix}}"
     tarball_name: "{{item}}.tgz"
     untarred_dir: "{{item}}"
+    correct_owner: "{{app_user}}"
+    correct_group: "{{app_user}}"
   include_tasks: install_s3_tarball.yml
   loop: "{{ modules }}"
 
-- name: bind rails modules into {{ bind_directory }}
-  when: bind_directory is defined
+- name: bind rails modules into {{ phoenix_modules_bind_directory }}
+  when: phoenix_modules_bind_directory is defined
   block:
-    - name: Make {{ bind_directory }} directory
+    - name: Make {{ phoenix_modules_bind_directory }} directory
       ansible.builtin.file:
-        path: "{{ bind_directory }}"
+        path: "{{ phoenix_modules_bind_directory }}"
         owner: root
         group: root
         mode: u=rwx,g=rx,o=rx
@@ -28,21 +30,21 @@
 
     - name: Mount bind directory
       ansible.posix.mount:
-        path: "{{ bind_directory }}"
-        src: "{{ phoenix_modules_root_dir }}"
+        path: "{{ phoenix_modules_bind_directory }}"
+        src: "{{ rails_root_dir }}"
         opts: bind
         fstype: "none"
         state: mounted
 
 - name: configure modules
   vars:
-    template_dest: "{{ phoenix_modules_root_dir }}/{{ module }}/config/local_environment.rb"
+    template_dest: "{{ rails_root_dir }}/{{ module }}/config/local_environment.rb"
     template_src: "{{ template_dest }}.tagged"
     replacements:
       - regexp: "%PASSWORD_ENCRYPTION_SALT%"
         replace: "--ghtJU7hgKjh--"
       - regexp: "%DYNAMIC_IMAGES%"
-        replace: "{{ dynamic_images }}"
+        replace: "{{ phoenix_modules_dynamic_images }}"
   include_tasks: install_tagged_configuration.yml
   loop: "{{ modules }}"
   loop_control:
@@ -50,7 +52,7 @@
 
 - name: configuring uma
   vars:
-    template_dest: "{{ phoenix_modules_root_dir }}/uma/db/fixtures/users.yml"
+    template_dest: "{{ rails_root_dir }}/uma/db/fixtures/users.yml"
     template_src: "{{ template_dest }}.tagged"
     replacements:
       - regexp: "%INTEGRTOR_PASSWORD%"
@@ -63,7 +65,7 @@
     - name: Monkey patch active record
       ansible.builtin.copy:
         src: monkey_patch_active_record.rb
-        dest: "{{ phoenix_modules_root_dir }}/{{ item }}/config/initializers/"
+        dest: "{{ rails_root_dir }}/{{ item }}/config/initializers/"
         owner: "{{ app_user }}"
         group: "{{ app_user }}"
       loop: "{{ modules }}"
@@ -79,7 +81,7 @@
     cmd: |
       PATH={{ruby_18_bin_dir}}:$PATH
       sudo -u {{ app_user }} --preserve-env=PATH /bin/bash -c 'rake db:drop_and_create RAILS_ENV={{ rails_env }} PHOENIX_START=0 --trace'
-    chdir: "{{ phoenix_modules_root_dir }}/{{ item }}"
+    chdir: "{{ rails_root_dir }}/{{ item }}"
   loop: "{{ modules }}"
 
 - name: Migrate database
@@ -87,7 +89,7 @@
     cmd: |
       PATH={{ruby_18_bin_dir}}:$PATH
       sudo -u {{ app_user }} --preserve-env=PATH /bin/bash -c 'rake db:rebuild RAILS_ENV={{ rails_env }} PHOENIX_START=0 --trace'
-    chdir: "{{ phoenix_modules_root_dir }}/{{ item }}"
+    chdir: "{{ rails_root_dir }}/{{ item }}"
   loop: "{{ modules }}"
 
 
@@ -96,7 +98,7 @@
     mongrel_user: "{{app_user}}"
     mongrel_conf_dir: "/etc/mongrel_cluster"
     template_dest: "{{ mongrel_conf_dir }}/{{ module }}.yml"
-    template_src: "{{ phoenix_modules_root_dir }}/{{ module }}/config/mongrel_cluster.yml.tagged"
+    template_src: "{{ rails_root_dir }}/{{ module }}/config/mongrel_cluster.yml.tagged"
     replacements:
       - regexp: "%MONGREL_USER%"
         replace: "{{ mongrel_user }}"
