--- a/ansible/roles/emma/tasks/main.yml
+++ b/ansible/roles/emma/tasks/main.yml
@@ -132,24 +132,27 @@
           line:   '  :build_date: "XXX"'
 
 - name: Create database
-  ansible.builtin.shell:
-    cmd: |
-      PATH={{ruby_19_bin_dir}}:$PATH
-      sudo -u "{{app_user}}" --preserve-env=PATH /bin/bash -c 'bundle exec rake db:drop_and_create:emma RAILS_ENV={{ rails_env }} --trace'
+  import_tasks: run_rake_task.yml
+  vars:
+    ruby_bin_dir: "{{ruby_19_bin_dir}}"
+    rake_task: "db:drop_and_create"
+    additional_env: ""
     chdir: "{{ emma_core_dir }}"
 
 - name: Populate database
-  ansible.builtin.shell:
-    cmd: |
-      PATH={{ruby_19_bin_dir}}:$PATH
-      sudo -u "{{app_user}}" --preserve-env=PATH /bin/bash -c 'bundle exec rake db:migrate:emma RAILS_ENV={{ rails_env }} --trace'
+  import_tasks: run_rake_task.yml
+  vars:
+    ruby_bin_dir: "{{ruby_19_bin_dir}}"
+    rake_task: "db:migrate:emma"
+    additional_env: ""
     chdir: "{{ emma_core_dir }}"
 
 - name: Precompile assets
-  ansible.builtin.shell:
-    cmd: |
-      PATH={{ruby_19_bin_dir}}:$PATH
-      sudo -u "{{app_user}}" --preserve-env=PATH /bin/bash -c 'bundle exec rake assets:precompile RAILS_ENV={{ rails_env }} --trace'
+  import_tasks: run_rake_task.yml
+  vars:
+    ruby_bin_dir: "{{ruby_19_bin_dir}}"
+    rake_task: "assets:precompile"
+    additional_env: ""
     chdir: "{{ emma_core_dir }}"
 
 - name: Install tooling
