Emma branch to install is configurable

--- a/ansible/roles/emma/tasks/main.yml
+++ b/ansible/roles/emma/tasks/main.yml
@@ -9,7 +9,7 @@
   block:
   - name: Download tar file
     ansible.builtin.get_url:
-      url: https://api.github.com/repos/alces-flight/concertim-emma/tarball/main
+      url: https://api.github.com/repos/alces-flight/concertim-emma/tarball/{{emma_git_tag}}
       dest: /tmp/emma.tgz
       headers:
         Authorization: token {{ github_token }}
