--- a/ansible/roles/package-daemons/tasks/main.yml
+++ b/ansible/roles/package-daemons/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Download daemon packages from S3
   amazon.aws.aws_s3:
-    bucket: alces-flight
-    object: /concertim/packages/daemons/{{ item }}.tgz
+    bucket: "{{s3_bucket}}"
+    object: "{{s3_daemons_prefix}}{{ item }}.tgz"
     dest: "{{ role_path }}/files/tmp/{{ item }}.tgz"
     mode: get
     aws_access_key: "{{ aws_access_key_id }}"
@@ -27,8 +27,8 @@
   block:
     - name: Download number cruncher from S3
       amazon.aws.aws_s3:
-        bucket: alces-flight
-        object: /concertim/packages/daemons/{{ item }}-number-cruncher.deb
+        bucket: "{{s3_bucket}}"
+        object: "{{s3_daemons_prefix}}{{ item }}-number-cruncher.deb"
         dest: "{{ role_path }}/files/tmp/{{ item }}-number-cruncher.deb"
         mode: get
         aws_access_key: "{{ aws_access_key_id }}"
