--- a/ansible/tasks/run_rake_task.yml
+++ b/ansible/tasks/run_rake_task.yml
@@ -2,6 +2,5 @@
   ansible.builtin.shell:
     cmd: |
       PATH={{ruby_bin_dir}}:$PATH
-      RAILS_ENV={{ rails_env }}
-      sudo -u {{ app_user }} --preserve-env=PATH,RAILS_ENV /bin/bash -c '{{additional_env}} rake {{rake_task}} --trace'
+      sudo -u {{ app_user }} --preserve-env=PATH /bin/bash -c 'RAILS_ENV={{rails_env}} {{additional_env}} rake {{rake_task}} --trace'
     chdir: "{{chdir}}"
