Generalize the package build script
* It builds packages for the modules and daemons
* It builds the version.yml and release.info files
* It has a working ansible role

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -6,7 +6,7 @@
     fail_msg: "{{ item }} credential has not been given"
     quiet: true
   loop:
-    - github_token
+    - gh_token
     - aws_access_key_id
     - aws_secret_access_key
 
