--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -29,7 +29,7 @@ PLAYBOOKS = [
     id: "build",
     path: File.join(ANSIBLE_DIR, "build-playbook.yml"),
     extra_vars: {
-      'github_token' => ENV.fetch('GH_TOKEN', ''),
+      'gh_token' => ENV.fetch('GH_TOKEN', ''),
       'aws_access_key_id' => ENV.fetch('AWS_ACCESS_KEY_ID', ''),
       'aws_secret_access_key' => ENV.fetch('AWS_SECRET_ACCESS_KEY', ''),
     }
