--- a/ansible/roles/emma/tasks/main.yml
+++ b/ansible/roles/emma/tasks/main.yml
@@ -12,7 +12,7 @@
       url: https://api.github.com/repos/alces-flight/concertim-emma/tarball/{{emma_git_tag}}
       dest: /tmp/emma.tgz
       headers:
-        Authorization: token {{ github_token }}
+        Authorization: token {{ gh_token }}
 
   - name: Extract tar file
     ansible.builtin.unarchive:
