Package emma appliance from github for S3 too

--- a/ansible/roles/build-packages/defaults/main.yml
+++ b/ansible/roles/build-packages/defaults/main.yml
@@ -15,4 +15,7 @@ build_packages_modules:
   - scram:main
   - uma:main
 
+build_packages_appliances:
+  - emma:main
+
 build_packages_namespace: "dev-{{ansible_date_time.date}}"
