--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -32,6 +32,7 @@ PLAYBOOKS = [
       'gh_token' => ENV.fetch('GH_TOKEN', ''),
       'aws_access_key_id' => ENV.fetch('AWS_ACCESS_KEY_ID', ''),
       'aws_secret_access_key' => ENV.fetch('AWS_SECRET_ACCESS_KEY', ''),
+      'release_tag' => ENV.fetch('MIA_RELEASE_TAG', ''),
     }
   },
   {
