--- a/ansible/build-assets-playbook.yml
+++ b/ansible/build-assets-playbook.yml
@@ -11,5 +11,6 @@
   become_user: root
   become_method: sudo
   roles:
+    - role: package_base
     - role: build-packages
       tags: build-packages
