--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -21,6 +21,16 @@ MACHINES = [
 ]
 PLAYBOOKS = [
   {
+    id: "package",
+    path: File.join(ANSIBLE_DIR, "build-assets-playbook.yml"),
+    extra_vars: {
+      'gh_token' => ENV.fetch('GH_TOKEN', ''),
+      'aws_access_key_id' => ENV.fetch('AWS_ACCESS_KEY_ID', ''),
+      'aws_secret_access_key' => ENV.fetch('AWS_SECRET_ACCESS_KEY', ''),
+      'release_tag' => ENV.fetch('MIA_RELEASE_TAG', ''),
+    }
+  },
+  {
     id: "prep",
     path: File.join(ANSIBLE_DIR, "prep-playbook.yml"),
     extra_vars: {}
