--- a/ansible/roles/package-assets/defaults/main.yml
+++ b/ansible/roles/package-assets/defaults/main.yml
@@ -19,4 +19,4 @@ package_assets_appliances:
   - emma:main
   - mia:main
 
-package_assets_fake_gmond_tag: chore/incorporate-patches
+package_assets_fake_gmond_tag: main
